--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1"
   }
 }
